Fix technical debt/JUnit on policy-yaml
Unit tests added and technical debt removed

Issue-ID: POLICY-455
Change-Id: I31566f9386cb94d78e9af3d6261e31b9cad1cb53
Signed-off-by: mmis <michael.morris@ericsson.com>